vlib/v/checker/tests/array_literal_modify_err.vv
fn main() {
	mut nums := [1, 2, 3] << 4
	println(nums)
}
